# DistributedComputations

lab2/: CMakeLists.txt  main.c
lab4/: CMakeLists.txt  list.c  list.h  netutils.c  netutils.h  version1.c  version2.c  version3.c
lab5/google-docs-backend/: package-lock.json  package.json  server.js
lab5/google-docs-frontend/: package-lock.json  package.json
lab5/google-docs-frontend/src/: App.js  DocList.js  TextEditor.js  styles.css
